teste de commit 2

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,4 +13,6 @@ knitr::opts_chunk$set(
 
 # Autocorrelação Espacial e Aprendizado de máquina
 
-*Laís de Souza Teixeira & Alan Rodrigo Panosso*
+*Laís de Souza Teixeira & Alan Rodrigo Panosso* 
+
+*emissão de CO~2~ do solo*
