--- a/README.Rmd
+++ b/README.Rmd
@@ -23,9 +23,10 @@ library(tidyverse)
 library(sp)
 library(geobr)
 library(skimr)
-# library(GSIF)
+library(GSIF)
 library(geoR)
 library(raster)
+library(ranger)
 ```
 
 ```{r}
@@ -36,8 +37,7 @@ skim(dados)
 # Seguindo o exemplo de Meuse
 
 ```{r}
-demo(meuse, echo=FALSE)
-data(meuse)
+data("meuse")
 ```
 
 ## Ajustando o modelo
@@ -53,7 +53,10 @@ zinc.vgm <- likfit(zinc.geo, lambda=0, ini=ini.v, cov.model=
 
 ```{r}
 data("meuse.grid")
+data("meuse")
 locs <- as.geodata(meuse.grid)$coords
+meuse.grid <- SpatialPointsDataFrame(meuse.grid[1:2],meuse.grid)
+meuse.grid <- SpatialPointsDataFrame(meuse[1:2],meuse)
 zinc.ok <- krige.conv(zinc.geo, locations=locs, krige=krige.control
 (obj.m=zinc.vgm))
 ```
@@ -61,23 +64,65 @@ zinc.ok <- krige.conv(zinc.geo, locations=locs, krige=krige.control
 
 
 ## Buffer distance
+which derives a gridded map for each observation point. The spatial prediction model is defined as:
+
 ```{r}
-# grid.dist0 <- buffer.dist(meuse["zinc"], as.geodata(meuse.grid)[1], as.factor(1:nrow(meuse)))
-# 
-# classes <- cut(meuse$om, breaks=seq(0, 17, length=8))
-# grid.dist <- buffer.dist(meuse["om"], as.geodata(meuse.grid)[1], classes)
-# plot(stack(grid.dist))
+data("meuse.grid")
+data("meuse")
+grid.dist0 <- GSIF::buffer.dist(
+  SpatialPointsDataFrame(meuse[1:2],meuse),  
+  SpatialPixelsDataFrame(points = meuse.grid[c("x", "y")], data = meuse.grid)[1],
+  as.factor(1:nrow(meuse))
+)
 ```
 
 
+```{r}
+dn0 <- paste(names(grid.dist0), collapse="+")
+fm0 <- as.formula(paste("zinc ~ ", dn0))
+```
 
 
+which means that the target variable is a function of 155 covariates. Next, we overlay points and covariates to create a regression matrix, so that we can tune and fit a ranger model, and generate predictions:
+
+```{r}
+data("meuse")
+ov.zinc <- over(SpatialPointsDataFrame(meuse[1:2],meuse), grid.dist0)
+rm.zinc <- cbind(meuse["zinc"], ov.zinc)
+m.zinc <- ranger(fm0, rm.zinc, quantreg=TRUE, num.trees=150, 
+                 mtry = 98,
+                 min.node.size = 4)
+m.zinc
+```
 
 
+```{r}
+zinc.rfd <- predict(m.zinc, grid.dist0@data)
+str(zinc.rfd)
+```
 
 
+```{r}
+meuse.grid$zinc_rfd = zinc.rfd$predictions
+meuse.grid$zinc_ok = zinc.ok$predict
+#meuse.grid$zinc_rfd_range = (zinc.rfd[,3]-zinc.rfd[,1])/2
+cor.test(zinc.rfd$predictions,zinc.ok$predict)
+```
+
+```{r}
+as.tibble(meuse.grid) |> 
+  ggplot(aes(x=x,y=y)) +
+  geom_tile(aes(fill = zinc_ok)) +
+  ggplot2::scale_fill_gradient(low = "yellow", high = "blue") +
+  ggplot2::coord_equal()
+```
 
 
-
-
+```{r}
+as.tibble(meuse.grid) |> 
+  ggplot(aes(x=x,y=y)) +
+  geom_tile(aes(fill = zinc_rfd)) +
+  ggplot2::scale_fill_gradient(low = "yellow", high = "blue") +
+  ggplot2::coord_equal()
+```
 
