--- a/Docs/fco2_RFs.Rmd
+++ b/Docs/fco2_RFs.Rmd
@@ -30,35 +30,37 @@ library(ranger)
 ```
 
 ```{r}
-dados <- read_rds("data/dados_lais.rds")
+dados <- read_rds("../data/dados_lais.rds")
 skim(dados)
 ```
 
-# Seguindo o exemplo de Meuse
+# Dados
 
 ```{r}
-data("meuse")
+da <- dados |> filter(data == "2015-10-02") |> 
+  mutate(FCO2 = ifelse(FCO2 <0, mean(FCO2),FCO2) ) |> 
+  dplyr::select(x,y,FCO2)
 ```
 
 ## Ajustando o modelo
 
 
 ```{r}
-zinc.geo <- as.geodata(meuse[c("x","y","zinc")])
-ini.v <- c(var(log1p(zinc.geo$data)),500)
-zinc.vgm <- likfit(zinc.geo, lambda=0, ini=ini.v, cov.model=
+fco2.geo <- as.geodata(da[c("x","y","FCO2")])
+ini.v <- c(var(log1p(fco2.geo$data)),500)
+fco2.vgm <- likfit(zinc.geo, lambda=0, ini=ini.v, cov.model=
 "exponential")
 ```
 
 
 ```{r}
-data("meuse.grid")
-data("meuse")
-locs <- as.geodata(meuse.grid)$coords
-#meuse.grid <- SpatialPointsDataFrame(meuse.grid[1:2],meuse.grid)
-meuse.grid <- SpatialPointsDataFrame(meuse[1:2],meuse)
-zinc.ok <- krige.conv(zinc.geo, locations=locs, krige=krige.control
-(obj.m=zinc.vgm))
+dis <- 2
+da.grid <- expand.grid(x=seq(min(da$x),max(da$x),dis), y=seq(min(da$y),max(da$y),dis))
+da.grid$part.a<-0
+locs <- as.geodata(da.grid)$coords
+da.grid <- SpatialPointsDataFrame(da[1:2],da)
+fco2.ok <- krige.conv(fco2.geo, locations=locs, krige=krige.control
+(obj.m=fco2.vgm))
 ```
 
 
@@ -67,61 +69,61 @@ zinc.ok <- krige.conv(zinc.geo, locations=locs, krige=krige.control
 which derives a gridded map for each observation point. The spatial prediction model is defined as:
 
 ```{r}
-data("meuse.grid")
-data("meuse")
+dis <- 2
+da.grid <- expand.grid(x=seq(min(da$x),max(da$x),dis), y=seq(min(da$y),max(da$y),dis))
+da.grid$part.a<-0
 grid.dist0 <- GSIF::buffer.dist(
-  SpatialPointsDataFrame(meuse[1:2],meuse),  
-  SpatialPixelsDataFrame(points = meuse.grid[c("x", "y")], data = meuse.grid)[1],
-  as.factor(1:nrow(meuse))
+  SpatialPointsDataFrame(da[1:2],da),  
+  SpatialPixelsDataFrame(points = da.grid[c("x", "y")], data = da.grid)[1],
+  as.factor(1:nrow(da))
 )
 ```
 
 
 ```{r}
 dn0 <- paste(names(grid.dist0), collapse="+")
-fm0 <- as.formula(paste("zinc ~ ", dn0))
+fm0 <- as.formula(paste("FCO2 ~ ", dn0))
 ```
 
 
 which means that the target variable is a function of 155 covariates. Next, we overlay points and covariates to create a regression matrix, so that we can tune and fit a ranger model, and generate predictions:
 
 ```{r}
-data("meuse")
-ov.zinc <- over(SpatialPointsDataFrame(meuse[1:2],meuse), grid.dist0)
-rm.zinc <- cbind(meuse["zinc"], ov.zinc)
-m.zinc <- ranger(fm0, rm.zinc, quantreg=TRUE, num.trees=150, 
-                 mtry = 98,
-                 min.node.size = 4)
-m.zinc
+ov.fco2 <- over(SpatialPointsDataFrame(da[1:2],da), grid.dist0)
+rm.fco2 <- cbind(da["FCO2"], ov.fco2)
+m.fco2 <- ranger(fm0, rm.fco2, quantreg=TRUE, num.trees=1500, 
+                 mtry = 100,
+                 min.node.size = 5)
+m.fco2
 ```
 
 
 ```{r}
-zinc.rfd <- predict(m.zinc, grid.dist0@data)
-str(zinc.rfd)
+fco2.rfd <- predict(m.fco2, grid.dist0@data)
+str(fco2.rfd)
 ```
 
 
 ```{r}
-meuse.grid$zinc_rfd = zinc.rfd$predictions
-meuse.grid$zinc_ok = zinc.ok$predict
+da.grid$FCO2_rfd = fco2.rfd$predictions
+da.grid$FCO2_ok = fco2.ok$predict
 #meuse.grid$zinc_rfd_range = (zinc.rfd[,3]-zinc.rfd[,1])/2
 cor.test(zinc.rfd$predictions,zinc.ok$predict)
 ```
 
 ```{r}
-as.tibble(meuse.grid) |> 
+as.tibble(da.grid) |> 
   ggplot(aes(x=x,y=y)) +
-  geom_tile(aes(fill = zinc_ok)) +
+  geom_tile(aes(fill = FCO2_ok)) +
   ggplot2::scale_fill_gradient(low = "yellow", high = "blue") +
   ggplot2::coord_equal()
 ```
 
 
 ```{r}
-as.tibble(meuse.grid) |> 
+as.tibble(da.grid) |> 
   ggplot(aes(x=x,y=y)) +
-  geom_tile(aes(fill = zinc_rfd)) +
+  geom_tile(aes(fill = FCO2_rfd)) +
   ggplot2::scale_fill_gradient(low = "yellow", high = "blue") +
   ggplot2::coord_equal()
 ```
