--- a/Docs/fco2_RFs.Rmd
+++ b/Docs/fco2_RFs.Rmd
@@ -48,19 +48,42 @@ da <- dados |> filter(data == "2015-10-02") |>
 ```{r}
 fco2.geo <- as.geodata(da[c("x","y","FCO2")])
 ini.v <- c(var(log1p(fco2.geo$data)),500)
-fco2.vgm <- likfit(zinc.geo, lambda=0, ini=ini.v, cov.model=
+fco2.vgm <- likfit(fco2.geo, lambda=0, ini=ini.v, cov.model=
 "exponential")
+######
+fco2_aux <- da[c("x","y","FCO2")]
+sp::coordinates(fco2_aux)=~x+y  
+form_fco2<-FCO2~1
+vari_beta <- gstat::variogram(form_fco2, data=fco2_aux)
+m_beta <- gstat::fit.variogram(vari_beta,fit.method = 7,
+                               gstat::vgm(1, "Sph", 8, 1))
 ```
 
 
 ```{r}
-dis <- 2
+dis <- .5
 da.grid <- expand.grid(x=seq(min(da$x),max(da$x),dis), y=seq(min(da$y),max(da$y),dis))
 da.grid$part.a<-0
 locs <- as.geodata(da.grid)$coords
 da.grid <- SpatialPointsDataFrame(da[1:2],da)
 fco2.ok <- krige.conv(fco2.geo, locations=locs, krige=krige.control
 (obj.m=fco2.vgm))
+
+
+x<-fco2_aux$x
+y<-fco2_aux$y
+dis <- .5 #Distância entre pontos
+grid <- expand.grid(X=seq(min(x),max(x),dis), Y=seq(min(y),max(y),dis))
+sp::gridded(grid) = ~ X + Y
+ko_beta<-gstat::krige(formula=form_fco2, fco2_aux, grid, model=m_beta, 
+    block=c(1,1),
+    nsim=0,
+    na.action=na.pass,
+    debug.level=-1,  
+    )
+fco2.ok2<-ko_beta$var1.pred
+
+
 ```
 
 
@@ -69,7 +92,7 @@ fco2.ok <- krige.conv(fco2.geo, locations=locs, krige=krige.control
 which derives a gridded map for each observation point. The spatial prediction model is defined as:
 
 ```{r}
-dis <- 2
+dis <- .5
 da.grid <- expand.grid(x=seq(min(da$x),max(da$x),dis), y=seq(min(da$y),max(da$y),dis))
 da.grid$part.a<-0
 grid.dist0 <- GSIF::buffer.dist(
@@ -107,14 +130,16 @@ str(fco2.rfd)
 ```{r}
 da.grid$FCO2_rfd = fco2.rfd$predictions
 da.grid$FCO2_ok = fco2.ok$predict
+da.grid$FCO2_ok2 = fco2.ok2
 #meuse.grid$zinc_rfd_range = (zinc.rfd[,3]-zinc.rfd[,1])/2
-cor.test(zinc.rfd$predictions,zinc.ok$predict)
+cor.test(da.grid$FCO2_rfd,da.grid$FCO2_ok) 
+cor.test(da.grid$FCO2_rfd,da.grid$FCO2_ok2) 
 ```
 
 ```{r}
 as.tibble(da.grid) |> 
   ggplot(aes(x=x,y=y)) +
-  geom_tile(aes(fill = FCO2_ok)) +
+  geom_tile(aes(fill = FCO2_ok2)) +
   ggplot2::scale_fill_gradient(low = "yellow", high = "blue") +
   ggplot2::coord_equal()
 ```
